[package]
name = "tekstitv_235"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = "0.11.8"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
scraper = "0.12.0"
regex = "1.5.4"
