[package]
name = "nhl_2022"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
reqwest = "0.13.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
scraper = "0.27.0"
regex = "1.12.3"
colored = "3.1.1"
indoc = "2.0.6"
